<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@android:color/white">

    <!-- Title -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_playlist_manager"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"/>

    <!-- Add to Playlist Button -->
    <Button
        android:id="@+id/btnAddToPlaylist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_playlist"
        android:layout_marginBottom="20dp"
        tools:ignore="VisualLintButtonSize" />

    <!-- View Playlist Details Button -->
    <Button
        android:id="@+id/btnViewDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_playlist_details"
        android:layout_marginBottom="20dp"
        tools:ignore="VisualLintButtonSize" />

    <!-- Exit Button -->
    <Button
        android:id="@+id/btnExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_app"
        tools:ignore="VisualLintButtonSize" />
</LinearLayout>
